// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`journey: genLogMethods with env composability given: [case1] global logger with env baked in when: [t0] wrapped operation logs via withLogTrail then: nested logs inherit env from global logger 1`] = `
{
  "env": {
    "commit": "main@abc123",
  },
  "level": "info",
  "message": "processOrder.progress: order processed",
  "metadata": "{"orderId":"ord_456"}",
  "timestamp": "[masked]",
  "trail": {
    "stack": [
      "processOrder",
    ],
  },
}
`;

exports[`journey: genLogMethods with env composability given: [case2] env precedence: genContextLogTrail env vs inherited when: [t0] genContextLogTrail provides different env then: per-request env wins over inherited env 1`] = `
{
  "env": {
    "commit": "request@222",
  },
  "level": "info",
  "message": "handleRequest.progress: request handled",
  "metadata": undefined,
  "timestamp": "[masked]",
  "trail": {
    "exid": "req_xyz",
    "stack": [
      "handleRequest",
    ],
  },
}
`;

exports[`journey: genLogMethods with env composability given: [case3] global logger without trail, just env when: [t0] direct log call (no withLogTrail) then: log includes env.commit 1`] = `
{
  "env": {
    "commit": "deploy@v1.2.3",
  },
  "level": "info",
  "message": "server started",
  "metadata": "{"port":3000}",
  "timestamp": "[masked]",
}
`;
